// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connection initalization 1`] = `"dynamo db connection is not initialized"`;

exports[`convertPriceBarToSchema 1`] = `
Object {
  "close": Object {
    "N": "2",
  },
  "high": Object {
    "N": "3",
  },
  "hour": Object {
    "N": "1",
  },
  "low": Object {
    "N": "0",
  },
  "open": Object {
    "N": "1",
  },
  "sourceDate": Object {
    "S": "src|YYYY-MM-DD",
  },
  "timestamp": Object {
    "N": "1234567890",
  },
  "volume": Object {
    "N": "123",
  },
}
`;

exports[`convertTradeToSchema 1`] = `
Object {
  "amount": Object {
    "N": "456",
  },
  "id": Object {
    "S": "id",
  },
  "price": Object {
    "N": "123",
  },
  "systime": Object {
    "N": "123",
  },
  "timestamp": Object {
    "N": "1234567890",
  },
}
`;

exports[`convertTradeToSchema 2`] = `
Object {
  "price": Object {
    "N": "123",
  },
  "timestamp": Object {
    "N": "1234567890",
  },
  "volume": Object {
    "N": "456",
  },
}
`;

exports[`insertHeartbeat 1`] = `
Object {
  "Item": Object {
    "process": Object {
      "S": "UNKNOWN",
    },
    "timestamp": Object {
      "N": "0",
    },
  },
  "TableName": "status_dev",
}
`;

exports[`insertHourlyData 1`] = `
Object {
  "Item": Object {
    "close": Object {
      "N": "2",
    },
    "high": Object {
      "N": "3",
    },
    "hour": Object {
      "N": "1",
    },
    "low": Object {
      "N": "0",
    },
    "open": Object {
      "N": "1",
    },
    "sourceDate": Object {
      "S": "src|YYYY-MM-DD",
    },
    "timestamp": Object {
      "N": "1234567890",
    },
    "volume": Object {
      "N": "123",
    },
  },
  "TableName": "hourly_dev",
}
`;

exports[`insertStatusData 1`] = `
Object {
  "Item": Object {
    "process": Object {
      "S": "UNKNOWN",
    },
    "test": "test",
  },
  "TableName": "status_dev",
}
`;

exports[`insertTradeData 1`] = `
Object {
  "Item": Object {
    "amount": Object {
      "N": "456",
    },
    "id": Object {
      "S": "id",
    },
    "price": Object {
      "N": "123",
    },
    "sourceDate": Object {
      "S": "src|1970-01-15",
    },
    "systime": Object {
      "N": "0",
    },
    "timestamp": Object {
      "N": "1234567890",
    },
  },
  "TableName": "trades_dev",
}
`;

exports[`insertTradeData 2`] = `
Object {
  "Item": Object {
    "amount": Object {
      "N": "456",
    },
    "id": Object {
      "S": "id",
    },
    "price": Object {
      "N": "123",
    },
    "process": Object {
      "S": "UNKNOWN",
    },
    "systime": Object {
      "N": "0",
    },
    "timestamp": Object {
      "N": "1234567890",
    },
  },
  "TableName": "status_dev",
}
`;
